--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ composectl.exe
 
 # Ignore test results
 test/archive
+
+# Ignore hugo build cache/artifacts
+docs/public/
+docs/resources/
+docs/.hugo_build.lock
